# qudis

./: Cargo.toml  Dockerfile  README.md  cdx.sh  docker-compose-dev.yml  docker-compose.yml  entrypoint.sh
.data/: wal.aof
.github/workflows/: aws-copilot-deploy.yml
copilot/: .workspace
copilot/environments/qudis-env/: manifest.yml
copilot/qudis-kv/: manifest.yml
copilot/qudis-kv/addons/: qudis-wal.yml
src/: app.rs  data.rs  main.rs
