[package]
name = "qudis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-web-httpauth = "0.8.1"
aws-config = {version = "1.2.0", features = ["behavior-version-latest"]}
aws-sdk-s3 = "1.23.0"
base64 = "0.22.0"
chrono = "0.4.38"
diesel = { version = "2.1.6", features = ["postgres"] }
dotenvy = "0.15.7"
env_logger = "0.11.3"
jsonwebtoken = "9.3.0"
log = "0.4.21"
serde = "1.0.198"
serde_json = "1.0.116"
sha2 = "0.10.8"
tokio = {version = "1.37.0", features = ["full"] }
tokio_schedule = "0.3.1"
